--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1071,6 +1071,111 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "c352931b": {
+          "id": "c352931b",
+          "path": "week-6/exercise/index.html",
+          "output": "week-6/exercise/index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d640141a": {
+          "id": "d640141a",
+          "path": "week-6/exercise/styles/_styles.scss",
+          "output": "week-6/exercise/styles/_styles.css",
+          "name": "_styles.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": true,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compressed",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "21d57485": {
+          "id": "21d57485",
+          "path": "week-6/exercise/styles/_utilities.scss",
+          "output": "week-6/exercise/styles/_utilities.css",
+          "name": "_utilities.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": true,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compressed",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d640141a"
+          ],
+          "type": "sass"
+        },
+        "5244aee4": {
+          "id": "5244aee4",
+          "path": "week-6/exercise/styles/_variables.scss",
+          "output": "week-6/exercise/styles/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": true,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compressed",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d640141a"
+          ],
+          "type": "sass"
+        },
+        "1b307613": {
+          "id": "1b307613",
+          "path": "week-6/exercise/styles/_styles.css",
+          "output": "week-6/exercise/styles/_styles-dist.css",
+          "name": "_styles.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": false,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7c053c09": {
+          "id": "7c053c09",
+          "path": "week-6/exercise/styles/_typography.scss",
+          "output": "week-6/exercise/styles/_typography.css",
+          "name": "_typography.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": true,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compressed",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d640141a"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
